<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_actionbar"
        android:elevation="6dp"
        app:titleTextColor="@android:color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/texgyreheros_bold_webfont"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#fff"
            android:textSize="21sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.quizup.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppQuestionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_1"
                    android:text="@string/question_1" />

                <LinearLayout
                    android:id="@+id/question1"
                    style="@style/AppAnswerSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/answer_rounded_shape"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/answer1_1"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_1"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer1_2"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_2"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer1_3"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_3"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer1_4"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer1_4"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppQuestionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_3"
                    android:text="@string/question_2" />

                <LinearLayout
                    android:id="@+id/question2"
                    style="@style/AppAnswerSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/answer2_1"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_1"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer2_2"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_2"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer2_3"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_3"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer2_4"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2_4"
                        android:theme="@style/AppAnswerSelectorFormatting" />


                </LinearLayout>

            </LinearLayout>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    style="@style/AppQuestionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_4"
                    android:text="@string/question_3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <EditText
                        style="@style/AppAnswerField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer3_1"
                        android:inputType="textCapWords"
                        android:textColor="#2E88F1"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                </LinearLayout>

            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppQuestionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_2"
                    android:text="@string/question_4" />

                <LinearLayout
                    android:id="@+id/question3"
                    style="@style/AppAnswerSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/answer3_1"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_1"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer3_2"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_2"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer3_3"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_3"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                        <RadioButton
                            android:id="@+id/answer3_4"
                            style="@style/AppAnswerField"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/answer4_4"
                            android:theme="@style/AppAnswerSelectorFormatting" />

                    </RadioGroup>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/AppQuestionSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient_3"
                    android:text="@string/question_5" />

                <LinearLayout
                    android:id="@+id/question4"
                    style="@style/AppAnswerSection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/answer4_1"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_1"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer4_2"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_2"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer4_3"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_3"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                    <CheckBox
                        android:id="@+id/answer4_4"
                        style="@style/AppAnswerField"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_4"
                        android:theme="@style/AppAnswerSelectorFormatting" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_id"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/gradient_ripple"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Reset"
                android:clickable="true"
                android:onClick="resetScore"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>